--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -6,3 +6,11 @@
 body, label, .checkbox label {
 	font-weight: 300;
 }
+.footer{
+
+  position:absolute;
+  bottom:0;
+  width: 100%;
+  height: 60px;
+
+}
