--- a/resources/assets/less/bootstrap/variables.less
+++ b/resources/assets/less/bootstrap/variables.less
@@ -7,7 +7,7 @@
 //
 //## Gray and brand colors for use across Bootstrap.
 
-@gray-base:              #484441;
+@gray-base: #484441 ;
 @gray-darker:            lighten(@gray-base, 13.5%); // #222
 @gray-dark:              lighten(@gray-base, 20%);   // #333
 @gray:                   lighten(@gray-base, 33.5%); // #555
@@ -26,9 +26,9 @@
 //## Settings for some of the most global styles.
 
 //** Background color for `<body>`.
-@body-bg:               #EDEBF4;
+@body-bg: #f4d7e5;
 //** Global text color on `<body>`.
-@text-color:            @gray-dark;
+@text-color:            #484441 ;
 
 //** Global textual link color.
 @link-color:            @brand-primary;
@@ -354,12 +354,12 @@
 @navbar-padding-vertical:          ((@navbar-height - @line-height-computed) / 2);
 @navbar-collapse-max-height:       340px;
 
-@navbar-default-color: #484441;
-@navbar-default-bg: #484441;
+@navbar-default-color: #F97EB5;
+@navbar-default-bg: #F97EB5;
 @navbar-default-border:            darken(@navbar-default-bg, 6.5%);
 
 // Navbar links
-@navbar-default-link-color:                #777;
+@navbar-default-link-color: #ffffff;
 @navbar-default-link-hover-color:          #333;
 @navbar-default-link-hover-bg:             transparent;
 @navbar-default-link-active-color:         #555;
