--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -3,6 +3,24 @@
 @btn-font-weight: 300;
 @font-family-sans-serif: "Roboto", Helvetica, Arial, sans-serif;
 
+h2{
+  font-size:20px ;
+  color: #694683;
+
+}
+h3 {
+  font-size:14px;
+  color: #694683;
+}
+.h2{
+  font-size:20px ;
+  color: #694683;
+
+}
+.h3 {
+  font-size:14px;
+  color: #694683;
+}
 body, label, .checkbox label {
 	font-weight: 300;
 }
