--- a/resources/assets/less/bootstrap/variables.less
+++ b/resources/assets/less/bootstrap/variables.less
@@ -354,8 +354,9 @@
 @navbar-padding-vertical:          ((@navbar-height - @line-height-computed) / 2);
 @navbar-collapse-max-height:       340px;
 
-@navbar-default-color: #F97EB5;
-@navbar-default-bg: #F97EB5;
+@navbar-default-color: #cb299a;
+// Change navbar color on aplication
+@navbar-default-bg: #484441;
 @navbar-default-border:            darken(@navbar-default-bg, 6.5%);
 
 // Navbar links
