Bases de datos para la evaluación
Se crearon las bases de datos para el seguimiento y evaluación de
perfiles, y se comenzó con el ruteo y configuración.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1174,10 +1174,10 @@ a.bg-success:hover {
   background-color: #c1e2b3;
 }
 .bg-info {
-  background-color: #d9edf7;
+  background-color: #c5c1b7;
 }
 a.bg-info:hover {
-  background-color: #afd9ee;
+  background-color: #aea99b;
 }
 .bg-warning {
   background-color: #fcf8e3;
@@ -2170,14 +2170,14 @@ table th[class*="col-"] {
 .table > thead > tr.info > th,
 .table > tbody > tr.info > th,
 .table > tfoot > tr.info > th {
-  background-color: #d9edf7;
+  background-color: #c5c1b7;
 }
 .table-hover > tbody > tr > td.info:hover,
 .table-hover > tbody > tr > th.info:hover,
 .table-hover > tbody > tr.info:hover > td,
 .table-hover > tbody > tr:hover > .info,
 .table-hover > tbody > tr.info:hover > th {
-  background-color: #c4e3f3;
+  background-color: #bab5a9;
 }
 .table > thead > tr > td.warning,
 .table > tbody > tr > td.warning,
@@ -2901,8 +2901,8 @@ fieldset[disabled] .btn-success.active {
 }
 .btn-info {
   color: #ffffff;
-  background-color: #5bc0de;
-  border-color: #46b8da;
+  background-color: #de74dc;
+  border-color: #d95fd7;
 }
 .btn-info:hover,
 .btn-info:focus,
@@ -2911,8 +2911,8 @@ fieldset[disabled] .btn-success.active {
 .btn-info.active,
 .open > .dropdown-toggle.btn-info {
   color: #ffffff;
-  background-color: #31b0d5;
-  border-color: #269abc;
+  background-color: #d44bd2;
+  border-color: #cb30c8;
 }
 .btn-info:active,
 .btn-info.active,
@@ -2937,11 +2937,11 @@ fieldset[disabled] .btn-info:active,
 .btn-info.disabled.active,
 .btn-info[disabled].active,
 fieldset[disabled] .btn-info.active {
-  background-color: #5bc0de;
-  border-color: #46b8da;
+  background-color: #de74dc;
+  border-color: #d95fd7;
 }
 .btn-info .badge {
-  color: #5bc0de;
+  color: #de74dc;
   background-color: #ffffff;
 }
 .btn-warning {
@@ -4105,8 +4105,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-default {
-  background-color: #484441;
-  border-color: #373431;
+  background-color: #892363;
+  border-color: #6f1c50;
 }
 .navbar-default .navbar-brand {
   color: #ffffff;
@@ -4131,7 +4131,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
   color: #555555;
-  background-color: #373431;
+  background-color: #6f1c50;
 }
 .navbar-default .navbar-nav > .disabled > a,
 .navbar-default .navbar-nav > .disabled > a:hover,
@@ -4151,12 +4151,12 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar-default .navbar-collapse,
 .navbar-default .navbar-form {
-  border-color: #373431;
+  border-color: #6f1c50;
 }
 .navbar-default .navbar-nav > .open > a,
 .navbar-default .navbar-nav > .open > a:hover,
 .navbar-default .navbar-nav > .open > a:focus {
-  background-color: #373431;
+  background-color: #6f1c50;
   color: #555555;
 }
 @media (max-width: 767px) {
@@ -4172,7 +4172,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
     color: #555555;
-    background-color: #373431;
+    background-color: #6f1c50;
   }
   .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a,
   .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a:hover,
@@ -4498,11 +4498,11 @@ a.label:focus {
   background-color: #449d44;
 }
 .label-info {
-  background-color: #5bc0de;
+  background-color: #de74dc;
 }
 .label-info[href]:hover,
 .label-info[href]:focus {
-  background-color: #31b0d5;
+  background-color: #d44bd2;
 }
 .label-warning {
   background-color: #f0ad4e;
@@ -4669,12 +4669,12 @@ a.thumbnail.active {
   color: #2b542c;
 }
 .alert-info {
-  background-color: #d9edf7;
-  border-color: #bce8f1;
+  background-color: #c5c1b7;
+  border-color: #b5ada3;
   color: #31708f;
 }
 .alert-info hr {
-  border-top-color: #a6e1ec;
+  border-top-color: #aaa095;
 }
 .alert-info .alert-link {
   color: #245269;
@@ -4754,7 +4754,7 @@ a.thumbnail.active {
   background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
 }
 .progress-bar-info {
-  background-color: #5bc0de;
+  background-color: #de74dc;
 }
 .progress-striped .progress-bar-info {
   background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
@@ -4903,7 +4903,7 @@ a.list-group-item-success.active:focus {
 }
 .list-group-item-info {
   color: #31708f;
-  background-color: #d9edf7;
+  background-color: #c5c1b7;
 }
 a.list-group-item-info {
   color: #31708f;
@@ -4914,7 +4914,7 @@ a.list-group-item-info .list-group-item-heading {
 a.list-group-item-info:hover,
 a.list-group-item-info:focus {
   color: #31708f;
-  background-color: #c4e3f3;
+  background-color: #bab5a9;
 }
 a.list-group-item-info.active,
 a.list-group-item-info.active:hover,
@@ -5256,22 +5256,22 @@ a.list-group-item-danger.active:focus {
   border-bottom-color: #d6e9c6;
 }
 .panel-info {
-  border-color: #bce8f1;
+  border-color: #b5ada3;
 }
 .panel-info > .panel-heading {
   color: #31708f;
-  background-color: #d9edf7;
-  border-color: #bce8f1;
+  background-color: #c5c1b7;
+  border-color: #b5ada3;
 }
 .panel-info > .panel-heading + .panel-collapse > .panel-body {
-  border-top-color: #bce8f1;
+  border-top-color: #b5ada3;
 }
 .panel-info > .panel-heading .badge {
-  color: #d9edf7;
+  color: #c5c1b7;
   background-color: #31708f;
 }
 .panel-info > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: #bce8f1;
+  border-bottom-color: #b5ada3;
 }
 .panel-warning {
   border-color: #faebcc;
