--- a/resources/assets/less/bootstrap/variables.less
+++ b/resources/assets/less/bootstrap/variables.less
@@ -16,7 +16,7 @@
 
 @brand-primary:         darken(#cb299a, 6.5%);
 @brand-success:         #5cb85c;
-@brand-info:            #5bc0de;
+@brand-info: #de74dc;
 @brand-warning:         #f0ad4e;
 @brand-danger:          #d9534f;
 
@@ -356,7 +356,7 @@
 
 @navbar-default-color: #cb299a;
 // Change navbar color on aplication
-@navbar-default-bg: #484441;
+@navbar-default-bg: #892363;
 @navbar-default-border:            darken(@navbar-default-bg, 6.5%);
 
 // Navbar links
@@ -491,7 +491,7 @@
 @state-success-border:           darken(spin(@state-success-bg, -10), 5%);
 
 @state-info-text:                #31708f;
-@state-info-bg:                  #d9edf7;
+@state-info-bg: #c5c1b7;
 @state-info-border:              darken(spin(@state-info-bg, -10), 7%);
 
 @state-warning-text:             #8a6d3b;
