--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -35,3 +35,10 @@ body, label, .checkbox label {
   height: 60px;
 
 }
+body {
+  padding-top: 5px;
+}
+.starter-template {
+  padding: 40px 15px;
+  text-align: center;
+}
