--- a/resources/assets/less/bootstrap/variables.less
+++ b/resources/assets/less/bootstrap/variables.less
@@ -14,9 +14,9 @@
 @gray-light:             lighten(@gray-base, 46.7%); // #777
 @gray-lighter:           lighten(@gray-base, 93.5%); // #eee
 
-@brand-primary:         darken(#cb299a, 6.5%);
+@brand-primary:         darken(#484441, 6.5%);
 @brand-success:         #5cb85c;
-@brand-info: #de74dc;
+@brand-info: #f7405d;
 @brand-warning:         #f0ad4e;
 @brand-danger:          #d9534f;
 
@@ -26,7 +26,7 @@
 //## Settings for some of the most global styles.
 
 //** Background color for `<body>`.
-@body-bg: #f4d7e5;
+@body-bg: #e6e3ff;
 //** Global text color on `<body>`.
 @text-color:            #484441 ;
 
@@ -356,7 +356,7 @@
 
 @navbar-default-color: #cb299a;
 // Change navbar color on aplication
-@navbar-default-bg: #892363;
+@navbar-default-bg: #484441;
 @navbar-default-border:            darken(@navbar-default-bg, 6.5%);
 
 // Navbar links
