--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -42,6 +42,19 @@ body {
   padding: 40px 15px;
   text-align: center;
 }
+.setsize .icon-big{
+
+  font-size: 50px;
+  color:gray;
+
+}
+.showall{
+
+ margin-top: 30px;
+}
+.marginheader{
+  margin-top: 12px;
+}
 .putcolor .glyphicon {
 
   color: red;
