--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6268,6 +6268,16 @@ body {
   padding: 40px 15px;
   text-align: center;
 }
+.setsize .icon-big {
+  font-size: 50px;
+  color: gray;
+}
+.showall {
+  margin-top: 30px;
+}
+.marginheader {
+  margin-top: 12px;
+}
 .putcolor .glyphicon {
   color: red;
 }
