Agenda, tablas de gastos, fotos.
Controlador de evaluación, se agregaron las vistas semanales.

--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -29,7 +29,7 @@ body, label, .checkbox label {
 }
 .footer{
 
-  position:absolute;
+
   bottom:0;
   width: 100%;
   height: 60px;
@@ -57,5 +57,16 @@ body {
 }
 .putcolor .glyphicon {
 
-  color: red;
+  color: #c5c1b7;
+}
+.showframe{
+
+  border-style:  dotted;
+  border-width: thin;
+  border-color: #4B0082;
+}
+#map-canvas{
+
+  width: 500px;
+  height: 400px;
 }
